syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc Unary (HelloRequest) returns (HelloReply);

  rpc ServerStreaming (HelloRequest) returns (stream HelloReply);

  rpc ClientStreaming (stream HelloRequest) returns (HelloReply);
  
  rpc BidirectionalStreaming(stream HelloRequest) returns (stream HelloReply);

  rpc VideoStreaming (FileRequest) returns (stream ChunkMsg); 
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message ChunkMsg {
    bytes Chunk = 1;
}

message FileRequest {
    string FilePath = 1;
}
